--- a/.github/workflows/delete-releases.yml
+++ b/.github/workflows/delete-releases.yml
@@ -19,17 +19,17 @@ jobs:
     - name: Configure GitHub CLI
       run: |
         gh config set prompt disabled
-        gh auth login --with-token "${GITHUB_TOKEN}"
+        gh auth login --with-token "${KIAM_TOKEN}"
     - name: Delete stale releases
       run: |
-        git config --global user.name "${GITHUB_USER}"
-        git config --global user.email "${GITHUB_EMAIL}"
-        git clone https://"${GITHUB_USER}":"${GITHUB_TOKEN}"@github.com/"${GITHUB_USER}"/releases.git
+        git config --global user.name "${KIAM_USER}"
+        git config --global user.email "${KIAM_EMAIL}"
+        git clone https://"${KIAM_USER}":"${KIAM_TOKEN}"@github.com/"${KIAM_USER}"/releases.git
         cd releases
         gh release list | sed 's/|/ /' | awk '{print $1, $8}' | while read -r line; do gh release delete -y "$line"; done
         git fetch
         git tag -l | xargs -n 1 git push --delete origin
       env:
-        GITHUB_EMAIL: ${{ secrets.GITHUB_EMAIL }}
-        GITHUB_TOKEN: ${{ secrets.GITHUB_KEY }}
-        GITHUB_USER: ${{ secrets.GITHUB_USER }}
+        KIAM_EMAIL: ${{ secrets.KIAM_EMAIL }}
+        KIAM_TOKEN: ${{ secrets.KIAM_KEY }}
+        KIAM_USER: ${{ secrets.KIAM_USER }}
